@@ -1,3 +1,8 @@
+2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libstetic/wrapper/Widget.cs: Added missing null check. Don't set the Name
+	  property to unselectable widgets.
+
 2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libstetic/wrapper/Button.cs, libstetic/wrapper/ButtonBox.cs: Don't
